estilizando as mensagens

--- a/index.html
+++ b/index.html
@@ -5,11 +5,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+
     <title>Driven Whatsapp</title>
 </head>
 
 <body>
-    
+    <div>
+        <p>Bom dia, luz do dia.</p>
+    </div>
+    <div>
+        <p>Bom dia, minha princesa.</p>
+    </div>    
+    <div>
+        <p>Bom dia mãe!!</p>
+    </div>
+    <div>
+        <p>Bom dia brother. Bora para pelada!?</p>
+    </div>
+    <div>
+        <p>Bom dia brow. Bora tomar uma?!</p>
+    </div>    
+    <div>
+        <p>Bom dia brow. Qual a boa de hoje?</p>
+    </div>
+    <div>
+        <p>Bom dia! Segundou. Foco no trabalho.</p>
+    </div>
+    <div>
+        <p>Bom dia. Sextoou.</p>
+    </div>    
+    <div>
+        <p>Bom dia. Meio-dia. Quem fez, fez!!!</p>
+    </div>
 </body>
 
 </html>
