estilizado as divs de mensagens

--- a/index.html
+++ b/index.html
@@ -14,30 +14,57 @@
 <body>
     <div>
         <p>Bom dia, luz do dia.</p>
+        <img 
+        src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+        alt="logo WhatsApp">
     </div>
     <div>
         <p>Bom dia, minha princesa.</p>
+        <img 
+        src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+        alt="logo WhatsApp">
     </div>    
     <div>
         <p>Bom dia mãe!!</p>
+        <img 
+        src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+        alt="logo WhatsApp">
     </div>
     <div>
         <p>Bom dia brother. Bora para pelada!?</p>
+        <img 
+        src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+        alt="logo WhatsApp">
     </div>
     <div>
         <p>Bom dia brow. Bora tomar uma?!</p>
+        <img 
+        src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+        alt="logo WhatsApp">
     </div>    
     <div>
         <p>Bom dia brow. Qual a boa de hoje?</p>
+        <img 
+        src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+        alt="logo WhatsApp">
     </div>
     <div>
         <p>Bom dia! Segundou. Foco no trabalho.</p>
+        <img 
+        src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+        alt="logo WhatsApp">
     </div>
     <div>
         <p>Bom dia. Sextoou.</p>
+        <img 
+        src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+        alt="logo WhatsApp">
     </div>    
     <div>
         <p>Bom dia. Meio-dia. Quem fez, fez!!!</p>
+        <img 
+        src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
+        alt="logo WhatsApp">
     </div>
 </body>
 
