finalizado o layout e a lógica

--- a/index.html
+++ b/index.html
@@ -12,60 +12,61 @@
 </head>
 
 <body>
-    <div>
-        <p>Bom dia, luz do dia.</p>
+    <div class="message" onclick="hello(this)">
+        <p class="text-message">Bom dia, luz do dia.</p>
         <img 
         src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
         alt="logo WhatsApp">
     </div>
-    <div>
-        <p>Bom dia, minha princesa.</p>
+    <div class="message" onclick="hello(this)">
+        <p class="text-message">Bom dia, minha princesa.</p>
         <img 
         src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
         alt="logo WhatsApp">
     </div>    
-    <div>
-        <p>Bom dia mãe!!</p>
+    <div class="message" onclick="hello(this)">
+        <p class="text-message">Bom dia mãe!!</p>
         <img 
         src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
         alt="logo WhatsApp">
     </div>
-    <div>
-        <p>Bom dia brother. Bora para pelada!?</p>
+    <div class="message" onclick="hello(this)">
+        <p class="text-message">Bom dia brother. Bora para pelada!?</p>
         <img 
         src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
         alt="logo WhatsApp">
     </div>
-    <div>
-        <p>Bom dia brow. Bora tomar uma?!</p>
+    <div class="message" onclick="hello(this)">
+        <p class="text-message">Bom dia brow. Bora tomar uma?!</p>
         <img 
         src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
         alt="logo WhatsApp">
     </div>    
-    <div>
-        <p>Bom dia brow. Qual a boa de hoje?</p>
+    <div class="message" onclick="hello(this)">
+        <p class="text-message">Bom dia brow. Qual a boa de hoje?</p>
         <img 
         src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
         alt="logo WhatsApp">
     </div>
-    <div>
-        <p>Bom dia! Segundou. Foco no trabalho.</p>
+    <div class="message" onclick="hello(this)">
+        <p class="text-message">Bom dia! Segundou. Foco no trabalho.</p>
         <img 
         src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
         alt="logo WhatsApp">
     </div>
-    <div>
-        <p>Bom dia. Sextoou.</p>
+    <div class="message" onclick="hello(this)">
+        <p class="text-message">Bom dia. Sextoou.</p>
         <img 
         src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
         alt="logo WhatsApp">
     </div>    
-    <div>
-        <p>Bom dia. Meio-dia. Quem fez, fez!!!</p>
+    <div class="message" onclick="hello(this)">
+        <p class="text-message">Bom dia. Meio-dia. Quem fez, fez!!!</p>
         <img 
         src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" 
         alt="logo WhatsApp">
     </div>
+    <script type="text/javascript" src="main.js"></script>
 </body>
 
 </html>
