revisando estrutura da aplicação
nome da aplicação e do repositório

--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="stylesheet" type="text/css" href="styles.css" />
-
-    <title>Driven Whatsapp</title>
+    <title>Whatsapp Messages</title>
 </head>
-
 <body>
     <div class="message" onclick="hello(this)">
         <p class="text-message">Bom dia, luz do dia.</p>
@@ -68,5 +64,4 @@
     </div>
     <script type="text/javascript" src="main.js"></script>
 </body>
-
 </html>
